2012-11-16  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dt_print_aggdata): Move to...
	* libdtrace/dtrace.h (dtrace_print_aggdata): ... here, and rename.
	Add names to all unnamed arguments.
	* libdtrace/dt_aggrecate.c (dtrace_aggregate_print): Adjust.
	* libdtrace/dt_consume.c (dt_print_aggs): Likewise.
	(dt_print_agg): Likewise.

2012-11-12  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_symtab.c (DT_ST_PACKED): Use 0x02, not 0x03, so
	that flag testing works.
	(dt_symbol): Make dts_name a union with string and offset fields.
	(dt_symtab): New field dtst_strtab.
	(dt_symbol_sort_cmp): Adjust string field name.
	(dt_symbol_insert): Likewise.
	(dt_symtab_destroy): Likewise. Free the strtab; free the symbol
	name only if not packed.
	(dt_symbol_by_name): Look in the string table if packed.
	(dt_symbol_name): Likewise.
	(dt_symtab_pack): Do nothing if already packed.  Construct the
	string table.
	* libdtrace/dt_module.c (dtrace_update): Pack the symbol tables.

	* libdtrace/dt_module.c (dtrace_addr_range_merge): New function,
	merges adjacent address range entries.
	(dtrace_update): Use it after sorting the address ranges.

	Warning police.

	* libdtrace/dt_aggregate.c (dt_aggregate_valcmp): If there are no
	aggregate records, return 0, since two nonexistent aggregate
	records are by definition equal to each other.
	* libdtrace/dt_pid.c (dt_pid_usdt_mapping): #if out the variable
	as well as its uses.
	* libproc/Psymtab.c (Pupdate_maps): Likewise.
	(Preadauxvec): Likewise.
	(Pbuild_file_symtab): Clarify loop condition.
	* libdtrace/dt_proc.c (dt_proc_bpmain): Not currently used, #if out.
	(dt_proc_attach): Likewise.
	* libdtrace/i386/dis_tables.c (dtrace_disx86): Initialize some
	variables which could well be unused uninitialized.
	* libproc/Psymtab_machelf32.c (fake_elf32): Likewise.  Drop
	pointless conditionals around free().
	* libdtrace/i386/dt_isadep.c: Include <port.h> for gmatch().
	* test/triggers/pid-tst-gcc.c: Fix includes.