@@ -86,6 +86,7 @@ LIBDTRACE_1.0 {
 	dtrace_program_strcompile;
 	dtrace_provider_modules;
 	dtrace_setopt;
+	dtrace_setoptenv;
 	dtrace_sleep;
 	dtrace_stability_name;
 	dtrace_status;
